# terminal_chat_app

./: README.md
beast_client/: CMakeLists.txt  main.cpp  ui.cpp  ui.h
beast_server/: server.cpp
